refactor(MasterMenu)